option('enable-binaries',
  type : 'boolean',
  value : true,
  description : 'Enables binaries.'
)
option('enable-binary-tests',
  type : 'boolean',
  value : true,
  description : 'Enables binary tests.'
)
option('timeout', 
  type : 'integer', 
  min : 1, 
  max : 10, 
  value : 1,
  description : 'How Long the test app should execute',
)

