option('enable-binaries',
  type : 'boolean',
  value : true,
  description : 'Enables binaries.'
)
option('enable-binary-tests',
  type : 'boolean',
  value : true,
  description : 'Enables binary tests.'
)
option('enable-mui-meson-repos', 
  type : 'boolean', 
  value : false,
  description : 'Enable Mui Meson Repos',
)
option('enable-mui-colors-test', 
  type : 'boolean', 
  value : true,
  description : 'Enable Mui Colors test',
)
option('enable-mui-test', 
  type : 'boolean', 
  value : false,
  description : 'Enable Mui test',
)

option('timeout-test', 
  type : 'boolean', 
  value : true,
  description : 'Timeout during test',
)

option('timeout', 
  type : 'integer', 
  min : 1, 
  max : 30, 
  value : 1,
  description : 'How Long the test app should execute',
)

