timeout_bin = find_program('timeout', required : true)
mui_global_linkflags = ['-Wl,-framework,OpenGL']
add_project_link_arguments(mui_global_linkflags, language : ['c'])
#sdl2_dep = dependency('sdl2',fallback:['sdl2', 'sdl2'], required: true)
#sdl2_image_dep = dependency('sdl2_image',fallback:['sdl2_image', 'sdl2_image'], required: true)
