inc = [
  include_directories('c_deps/submodules/c_ansi'),
  include_directories('c_deps/submodules/c_string_buffer'),
  include_directories('c_deps/submodules/c_stringfn'),
  include_directories('c_deps/submodules/c_fsio/include'),
  include_directories('c_deps/submodules/c_string_buffer/include'),
  include_directories('c_deps/submodules/c_stringfn/include'),
  include_directories('c_deps/submodules/slug.c/src'),
  include_directories('c_deps/submodules/dbg.h'),
  include_directories('c_deps/submodules/str-replace.c/src'),
  include_directories('c_deps/submodules/slug.c/deps'),
  include_directories('c_deps/submodules/progressbar'),
  include_directories('c_deps/submodules/progressbar/include'),
  include_directories('c_deps/submodules/progressbar/include/progressbar'),
  include_directories('c_deps/submodules/progressbar/lib'),
  include_directories('c_deps/submodules/list/src'),
  include_directories('c_deps/submodules/progress.c'),
  include_directories('c_deps/submodules/c_darwin'),
  include_directories('c_deps/submodules/c_colors'),
  include_directories('c_deps/submodules/c_colors/parse-colors'),
  include_directories('c_deps/submodules/c_colors/submodules'),
  include_directories('c_deps/submodules'),
  include_directories('c_deps/submodules/c_darwin'),
  include_directories('c_deps/submodules/c_darwin/process'),
  include_directories('c_deps/submodules/c_darwin/rectangle'),
  include_directories('.'),
]  

subdir('c_deps/meson')
subdir('c_deps/meson/deps/iconv')
subdir('c_deps/submodules/c_darwin/process')
subdir('c_deps/submodules/c_ansi/ansi-codes')
subdir('c_deps/submodules/c_ansi/ansi-utils')
subdir('c_deps/submodules/c_darwin/core-utils')
subdir('c_deps/submodules/c_darwin/kitty')
subdir('c_deps/submodules/c_darwin/pbpaste')
subdir('c_deps/submodules/c_darwin/pasteboard')
subdir('c_deps/submodules/c_darwin/system-utils')
subdir('c_deps/submodules/c_darwin/active-app')
subdir('c_deps/submodules/c_darwin/window-utils')
subdir('c_deps/submodules/c_darwin/app-utils')
subdir('c_deps/submodules/c_ansi/ansi-rgb-utils')
subdir('c_deps/submodules/c_colors/db')
subdir('c_deps/submodules/c_colors/hex-png-pixel-utils')
subdir('c_deps/submodules/c_colors/rgb-ansi-utils')
subdir('c_deps/submodules/c_colors/colors-csv-parser')
subdir('c_deps/submodules/c_colors/colors-json-parser')
subdir('c_deps/submodules/c_darwin/rectangle')
